@@ -1,11 +1,17 @@
+2020-09-08  NIIBE Yutaka  <gniibe@fsij.org>
+
+	* src/modp256k1.c (modp256k1_add, modp256k1_reduce): Avoid
+	optimization to remove call of memmove.
+	* src/modp256r1.c (modp256r1_add, modp256r1_sub)
+	(modp256r1_reduce): Likewise.
+
 2020-09-07  NIIBE Yutaka  <gniibe@fsij.org>
 
 	* src/openpgp.c (gpg_get_firmware_update_key): Use an array.
 
+	* src/modp256k1.c (modp256k1_add, modp256k1_sub): Use memmove.
 	* src/modp256r1.c (modp256r1_add, modp256r1_sub)
-	(modp256r1_reduce): Use memmove.
-
-	*  (modp256k1_add, modp256k1_sub): Use memmove.
+	(modp256r1_reduce): Likewise.
 
 2020-09-04  NIIBE Yutaka  <gniibe@fsij.org>
 
